--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
 
-          <a href="https://www.covid-at-home.info/"><h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1></a>
+          <a href="https://www.covid-zu-hause.info/"><h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1></a>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
         </header>
