--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <link rel="manifest" href="/images/site.webmanifest">
+    <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/images/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+    
 {% seo %}
   </head>
 
@@ -18,6 +27,13 @@
 
           <a href="https://www.covid-zu-hause.info/"><h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1></a>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+
+          <div class="menu">
+            <div class="item"><a href="/">Hauptseite</a></div>
+            <div class="item"><a href="/shopping">Einkaufsliste</a></div>
+            <div class="item"><a href="/help">Ich möchte helfen!</a></div>            
+            <div class="item"><a href="/covid-at-home">Über uns</a></div>
+          </div>
 
         </header>
     </div>
