--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
             <div class="item"><a href="/">Hauptseite</a></div>
             <div class="item"><a href="/shopping">Einkaufsliste</a></div>
             <div class="item"><a href="/help">Ich möchte helfen!</a></div>            
-            <div class="item"><a href="/covid-at-home">Über uns</a></div>
+            <div class="item"><a href="/about">Über uns</a></div>
           </div>
 
         </header>
