languages menu in header

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,8 +3,8 @@
 
 @import "{{ site.theme }}";
 
-footer {
-  display: none !important;
+header.inner {
+	margin-top: 10px;
 }
 
 div.menu {
@@ -14,7 +14,14 @@ div.menu {
     table-layout: fixed;
 }
 
-div.menu > div.item {
+div.languages {
+	margin-bottom: 30px;
+    display: table;
+    width: 100%;
+    table-layout: fixed;
+}
+
+div.menu > div.item, div.languages> div.item {
     display: table-cell;
     color: white;
     text-align: center;
@@ -22,14 +29,14 @@ div.menu > div.item {
     width: 2%; /* any number is ok */
 }
 
-div.menu > div.item > a {
+div.item > a {
     color: white;
 }
 
-div.menu > div.item > a:active {
+div.item > a:active {
     color: red;
 }
 
 #header_wrap .inner {
-    padding: 50px 10px 10px 10px;
+    padding: 10px;
 }
