--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,12 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+        
+          <div class="languages">
+            <div class="item"><a href="https://covid-at-home.info">English</a></div>
+<!--            <div class="item"><a href="https://covid-zu-hause.info">Deutsch</a></div> -->
+            <div class="item"><a href="https://covid-en-casa.info">Español</a></div>
+          </div>
 
           <a href="https://www.covid-zu-hause.info/"><h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1></a>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
